<resources>
    <string name="app_name">Money Talks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="e_mail">E-mail</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="password">Password</string>
    <string name="remember_password">Remember password</string>
    <string name="sign_in1">Sign in</string>
    <string name="don_t_have_an_account_join_us">Don’t have an account?Join us</string>
    <string name="sign_up">Sign Up</string>
    <string name="we_need_an_email_for_notifications_and_a_password_for_login_purpose">We need an email for notifications and a password for login purpose</string>
    <string name="your_name">Your Name</string>
    <string name="passwordexample">*********</string>
    <string name="continue2">Continue</string>
    <string name="i_agree_to_the_terms_of_service_and_privacy_policy">I agree to the Terms of service and Privacy Policy</string>
    <string name="already_have_an_account_sign_in_now">Already have an account?Sign in now</string>
    <string name="name">Name</string>
    <string name="todo">TODO</string>
    <string name="passwordd">*********</string>
    <string name="input">Input</string>
    <string name="home">Home</string>
    <string name="staticsd">Statics</string>
    <string name="report">Report</string>
    <string name="dashboard">Dashboard</string>
    <string name="balance">BALANCE</string>
    <string name="_000_000_000">000.000.000</string>
    <string name="transactions">TRANSACTIONS</string>
    <string name="date">Date</string>
    <string name="choose_date">Choose date</string>
    <string name="note">Note</string>
    <string name="write_some_note_for_pay">Write some note for pay</string>
    <string name="cash">Cash</string>
    <string name="cash_you_transaction">Cash you transaction</string>
    <string name="pick_items_below">Pick items below</string>
    <string name="category">Category</string>
    <string name="nh_p_kho_n_thu">Nhập khoản thu</string>
    <string name="cash_you_expanse">Cash you expanse</string>
    <string name="write_some_note_about_your_expanse">Write some note about your expanse</string>
    <string name="nh_p_kho_n_chi">Nhập khoản chi</string>
    <string name="namecategory">Name Category</string>
    <string name="input_the_name_of_category">Input the name of category</string>
    <string name="n_u_ng">Ăn uống</string>
    <string name="salary_from_changi">Salary from Changi</string>
    <string name="_2023_03_26">2023-03-26</string>
    <string name="_4_930_38">+4,930,38</string>
    <string name="add_category">Add Category</string>
    <string name="submit">Submit</string>
    <string name="cash_you_revenue">Cash you revenue</string>
    <string name="income">Income : </string>
    <string name="expense">Expense : </string>
    <string name="recent_expense">Recent Expense</string>
    <string name="recent_income">Recent Income</string>
    <string name="title_activity_see_all">SeeAllActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="see_all_your_transaction">See all your transaction</string>
    <string name="expense1">Expense</string>
    <string name="icome">Income</string>
    <string name="see_all">See all</string>
    <string name="see_all_income">See all Income</string>
    <string name="total_income">Total Income</string>
    <string name="see_all_expense">See All Expense</string>
    <string name="total_expense">Total Expense</string>
    <string name="edit">Edit</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="edit_income">Edit Income</string>
    <string name="to_date">To date</string>
    <string name="from_date">From date</string>
    <string name="fast_accessible_effective">fast - accessible - effective</string>
    <string name="notifications">Notifications</string>
    <string name="setup_wallet">Setup Wallet</string>
    <string name="setting">Setting</string>
    <string name="policy">Policy</string>
    <string name="help">Help</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="hi">Money Talks Bar</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete_this_items">Are you sure you want to delete this items</string>
    <string name="cancel">Cancel</string>
    <string name="mua_do_an_sang_linh_tinh">mua do an sang linh tinh</string>
    <string name="d">Ok</string>
    <string name="or">or</string>
    <string name="add_avatar">Add Avatar</string>
    <string name="successful_registration_login_now">Successful registration, login now!</string>
    <string name="dasd">Sign In !</string>

</resources>