<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/dashboard"
        android:title="@string/dashboard"
        android:icon="@drawable/ic_dashbroad"/>

    <item
        android:id="@+id/Notifications"
        android:title="@string/notifications"
        android:icon="@drawable/ic_notifications"/>

    <item
        android:id="@+id/setup"
        android:title="@string/setup_wallet"
        android:icon="@drawable/ic_wallettwo"/>

    <item
        android:id="@+id/setting"
        android:title="@string/setting"
        android:icon="@drawable/ic_setting"/>

    <item
        android:id="@+id/policy"
        android:title="@string/policy"
        android:icon="@drawable/ic_policy"/>

    <item
        android:id="@+id/help"
        android:title="@string/help"
        android:icon="@drawable/ic_help"/>



</menu>