<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white_custom"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        tools:ignore="UselessParent">



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_oke"
            android:layout_gravity="center"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Successfully"
            android:layout_gravity="center"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:gravity="center"
            android:fontFamily="@font/bold"
            android:textSize="@dimen/_18ssp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textColor="@color/primary"/>

        <TextView
            android:id="@+id/details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/successful_registration_login_now"
            android:textColor="@color/secondary_text"
            android:layout_gravity="center"
            android:fontFamily="@font/regulor"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/negative_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/background_button_cancle"
                android:textColor="#000000"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/pogative_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dasd"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/background_button_cancle"
                android:backgroundTint="@color/primary"
                android:textColor="@color/white_custom"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>