<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>
    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:scrollbars="none"
        tools:context=".Fragment.Pay.PayFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:textStyle="bold"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/regulor"/>

                <EditText
                    android:id="@+id/inputDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_input"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:clickable="false"
                    android:focusableInTouchMode="false"
                    android:focusable="false"
                    android:cursorVisible="false"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/primary"
                    android:hint="@string/choose_date"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:maxLines="1"
                    android:textStyle="bold"
                    android:inputType="datetime"
                    android:autofillHints="" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:textStyle="bold"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/regulor"/>

                <EditText
                    android:id="@+id/inputNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_input"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/primary"
                    android:hint="@string/write_some_note_for_pay"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:maxLines="1"
                    android:textStyle="bold"
                    android:inputType="text"
                    android:autofillHints="" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cash"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:textStyle="bold"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/regulor"/>

                <EditText
                    android:id="@+id/inputCash"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_input"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/primary"
                    android:hint="@string/cash_you_revenue"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:maxLines="1"
                    android:textStyle="bold"
                    android:inputType="number"
                    android:autofillHints="" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:textStyle="bold"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/regulor"/>

                <EditText
                    android:id="@+id/inputCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_input"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/primary"
                    android:hint="@string/pick_items_below"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:maxLines="1"
                    android:textStyle="bold"
                    android:inputType="text"
                    android:autofillHints="" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/ButtonAddCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:backgroundTint="@color/primary"
                    android:src="@drawable/ic_add" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_6sdp"
                android:overScrollMode="never">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerviewCategoryRevenue"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_170sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:padding="@dimen/_10sdp" />
            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonAddRevenue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_button_large"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/submit"
                    android:fontFamily="@font/bold"
                    android:textColor="@color/white_custom"
                    android:textStyle="bold"/>
            </RelativeLayout>
        </LinearLayout>

    </ScrollView>


</layout>